# database_project_cs236

./: AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  EndOfFileAutomaton.cpp  EndOfFileAutomaton.h  Facts.cpp  Facts.h  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.h  Node.cpp  Node.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Queries.cpp  Queries.h  (+33 more)
Lab3PassOffCases/3-80/: input2.txt
